k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: admin
  name: admin
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: admin
